bce: Fix register dumping to skip blank area

When compiling with debug enabled, this produces an always false
warning. It's clear that this was to skip ranges that aren't used when
dumping the registers, so change the && to || to skip things properly.

PR: 200984
Sponsored by:		Netflix